--- a/Qrcodescanner/main.html
+++ b/Qrcodescanner/main.html
@@ -1,6 +1,6 @@
 <div id="container">
 
-<link rel="stylesheet" href="src/styles.css" />
+<link rel="stylesheet" href="styles.css" />
 
     <h1>QR Code Scanner</h1>
 
