--- a/Qrcodescanner/main.html
+++ b/Qrcodescanner/main.html
@@ -1,4 +1,10 @@
+<head>
+
+</head>
 <div id="container">
+
+<script src="https://rawgit.com/sitepoint-editors/jsqrcode/master/src/qr_packed.js">
+</script>
 
 <link rel="stylesheet" href="styles.css" />
 
