--- a/Qrcodescanner/main.html
+++ b/Qrcodescanner/main.html
@@ -1,5 +1,7 @@
 <head>
 
+<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
+
 </head>
 <div id="container">
 
@@ -21,4 +23,4 @@
     </div>
 </div>
 
-<script src="./src/qrCodeScanner.js"></script>
+<script src="qrCodeScanner.js"></script>
