--- a/Login.html
+++ b/Login.html
@@ -1,5 +1,5 @@
 <h1>login</h1>
-<button onclick="login()">Login</button>
+<button href="javascript:void(0);" onclick="login()">Login</button>
 <script>
 Function login() {
 Alert("loged in")
