--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <button class=btn type=submit >accept</button>
  <a class="btnbypass" href="Good.html">
    <button class="btnbypass" type=submit >accept but no login screen</button>
-   <a class="chat" href="chat/entry.html">
+   <a class="chat" href="chat/PRACTICE.PHP">
      <button class="chat" type=submit >chat</button>
 
