--- a/Info.html
+++ b/Info.html
@@ -25,7 +25,8 @@
 	  <div class="flex flex-wrap -m-4">
 		<div class="lg:w-1/3 sm:w-1/2 p-4">
 		  <div class="flex relative">
-			<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="sun.jpg">
+			<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="/img/src/220px-The_Sun_by_the_Atmospheric_Imaging_Assembly_of_NASA's_Solar_Dynamics_Observatory_-_20100819.jpg
+">
 			<div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
 			  <h1 class="title-font text-lg font-medium text-white mb-3">Sun</h1>
 			  <p class="leading-relaxed">Sun is the main part of the Solar System. It is situated in the center of the solar system. All the planets revolve around the sun.
