--- a/Good.html
+++ b/Good.html
@@ -29,6 +29,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </br>
     <form method="get" action="space.html"><button size=10 type="submit">space model</button></form>
     </br>
+    <form method="get" action="info.html"><button size=10 type="submit">info about space</button></form>
+    </br>
 <form method="get" action="minecraft.html"><button size=10 type="submit">minecraft</button></form>
     <form method="get" action="Assessments.html"><button size=10 type="submit">Assessments/work</button></form>
 
