--- a/lol.html
+++ b/lol.html
@@ -1,1 +1,1 @@
-<iframe src="https://cooperwilliams.github.io" title="my website"></iframe>
+<iframe src="https://cooperwilliams.github.io" width="1000" length="1000" title="my website"></iframe>
