--- a/podcast.html
+++ b/podcast.html
@@ -3,3 +3,82 @@
   <source src="horse.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
+</br>
+<audio controls>
+  <source src="eps/ep1.wav" type="audio/wav">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</br>
+<audio controls>
+  <source src="eps/ep1.wav" type="audio/wav">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</br>
+<audio controls>
+  <source src="eps/ep1.wav" type="audio/wav">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</br>
+<audio controls>
+  <source src="eps/ep1.wav" type="audio/wav">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</br>
+<audio controls>
+  <source src="eps/ep1.wav" type="audio/wav">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</br>
+<audio controls>
+  <source src="eps/ep1.wav" type="audio/wav">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</br>
+<audio controls>
+  <source src="eps/ep1.wav" type="audio/wav">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</br>
+<audio controls>
+  <source src="eps/ep1.wav" type="audio/wav">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</br>
+<audio controls>
+  <source src="eps/ep1.wav" type="audio/wav">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</br>
+<audio controls>
+  <source src="eps/ep1.wav" type="audio/wav">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</br>
+<audio controls>
+  <source src="eps/ep1.wav" type="audio/wav">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</br>
+<audio controls>
+  <source src="eps/ep1.wav" type="audio/wav">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</br>
+<audio controls>
+  <source src="eps/ep1.wav" type="audio/wav">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</br>
