--- a/podcast.html
+++ b/podcast.html
@@ -1,81 +1,4 @@
-<audio controls>
-  <source src="eps/ep1.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</br>
-<audio controls>
-  <source src="eps/ep1.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</br>
-<audio controls>
-  <source src="eps/ep1.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</br>
-<audio controls>
-  <source src="eps/ep1.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</br>
-<audio controls>
-  <source src="eps/ep1.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</br>
-<audio controls>
-  <source src="eps/ep1.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</br>
-<audio controls>
-  <source src="eps/ep1.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</br>
-<audio controls>
-  <source src="eps/ep1.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</br>
-<audio controls>
-  <source src="eps/ep1.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</br>
-<audio controls>
-  <source src="eps/ep1.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</br>
-<audio controls>
-  <source src="eps/ep1.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</br>
-<audio controls>
-  <source src="eps/ep1.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</br>
-<audio controls>
-  <source src="eps/ep1.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</br>
+<text>ep1 young dark emu part1</text>
 <audio controls>
   <source src="eps/ep1.wav" type="audio/wav">
   <source src="horse.mp3" type="audio/mpeg">
