--- a/gamewp.html
+++ b/gamewp.html
@@ -15,6 +15,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <h1> games below </h1>
+    <form method="get" action="googlegame.html"><button size=10 type="submit">the google game</button></form>
+    </br>
     <form method="get" action="Game.html"><button size=10 type="submit">run cube run</button></form>
     </br>
      <form method="get" action="Cool_game.html"><button size=10 type="submit">mage game</button></form>
