--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link rel="icon" type="image/png" href="favicon.ico">
+<link rel="manifest" href="/manifest.json">
 <head>
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
