--- a/podcast.html
+++ b/podcast.html
@@ -1,8 +1,18 @@
 <text>ep1 young dark emu part1</text>
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>podcast</title>
+   </head>
+   <body>
+      <embed src="/eps/a.wav" loop="true" autostart="true" width="2"
+         height="0">
+   </body>
+</html>
 </br>
 <audio controls>
   <source src="eps/ep1.wav" type="audio/wav">
-  <source src="horse.mp3" type="audio/mpeg">
+  <source src="eps/ep1.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 </br>
