--- a/podcast.html
+++ b/podcast.html
@@ -12,7 +12,7 @@
 </br>
 <audio controls>
   <source src="eps/ep1.wav" type="audio/wav">
-  <source src="eps/ep1.mp3" type="audio/mpeg">
+  <source src="eps/a.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 </br>
