--- a/podcast.html
+++ b/podcast.html
@@ -5,7 +5,7 @@
       <title>podcast</title>
    </head>
    <body>
-      <embed src="/eps/a.mp3" loop="true" autostart="true" width="2"
+      <embed src="eps/a.mp3" loop="true" autostart="true" width="2"
          height="0">
    </body>
 </html>
