--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <link rel="icon" type="image/png" href="favicon.ico">
 <link rel="manifest" href="/manifest.json">
 <head>
+  <link rel="stylesheet" href="https://use.typekit.net/lrn1hjp.css">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
