--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <link rel="icon" type="image/png" href="favicon.ico">
 <link rel="manifest" href="/manifest.json">
+ <meta name="have-i-been-pwned-verification" value="62e1f757d8a0e6e0d95b6f7ccaea6442"> 
 <head>
   <link rel="stylesheet" href="https://use.typekit.net/lrn1hjp.css">
   <!-- Google Tag Manager -->
