--- a/gamewp.html
+++ b/gamewp.html
@@ -28,6 +28,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <form method="get" action="https://mcpedl.com"><button size=10 type="submit">addons</button></form>
 <h1>broken/gavenup</h1>
 <form method="get" action="PONG.html"><button size=10 type="submit">PONG</button></form>
+<h1>embeded games</h1>
+<iframe width="560" height="315" src="https://cooperwilliams.github.io/webgl/index.html" frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
   </body>
 </html>
 
