--- a/Cookie.html
+++ b/Cookie.html
@@ -11,7 +11,7 @@
 
 	
 	function givecookies() {
-		console.log("Stop trying to cheat you already have" + cookiecount + "cookies")
+		console.log("Stop trying to cheat you already have" + " " + cookiecount + " " + "cookies")
 	}
 	
 var cookiecount = 0;
