--- a/Cookie.html
+++ b/Cookie.html
@@ -17,6 +17,7 @@
 	cookiecount = cookiecount + 9999999999999999999999999;
 		document.getElementById('text').value = cookiecount;
 		document.title = cookiecount + " cookies";
+		devmode()
 	}
 	
 var cookiecount = 0;
