--- a/Cookie.html
+++ b/Cookie.html
@@ -16,7 +16,7 @@
 	function devmode (){
 		var developermode = true
 	cookiecount = cookiecount + 9999999999999999999999999;
-		document.getElementById('text').value = cookiecount;
+		document.getElementById('text').value = "inf devmode active";
 		document.title = "devmode active";
 		devmode()
 	}
